--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,3 +41,65 @@ body {
 .react-flags-select .flag-select__option--selected {
   @apply bg-gray-50;
 }
+
+.project-swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.project-swiper .swiper-button-next,
+.project-swiper .swiper-button-prev {
+  color: #fff;
+  background: rgba(0, 0, 0, 0.5);
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  --swiper-navigation-size: 20px;
+}
+
+.project-swiper .swiper-button-next:hover,
+.project-swiper .swiper-button-prev:hover {
+  background: rgba(0, 0, 0, 0.8);
+}
+
+.project-swiper .swiper-pagination-bullet {
+  background: #fff;
+  opacity: 0.5;
+}
+
+.project-swiper .swiper-pagination-bullet-active {
+  background: #fff;
+  opacity: 1;
+}
+
+.modal-swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.modal-swiper .swiper-button-next,
+.modal-swiper .swiper-button-prev {
+  color: #fff;
+  background: rgba(0, 0, 0, 0.5);
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  --swiper-navigation-size: 24px;
+}
+
+.modal-swiper .swiper-button-next:hover,
+.modal-swiper .swiper-button-prev:hover {
+  background: rgba(0, 0, 0, 0.8);
+}
+
+.modal-swiper .swiper-pagination-bullet {
+  width: 10px;
+  height: 10px;
+  background: #fff;
+  opacity: 0.5;
+}
+
+.modal-swiper .swiper-pagination-bullet-active {
+  background: #fff;
+  opacity: 1;
+}
