--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,45 +3,16 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
   --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --background: #ffffff;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Language Selector Custom Styles */
-.react-flags-select-module {
-  @apply text-sm;
-}
-
-/* Override default styles */
-.react-flags-select .flag-select__btn {
-  @apply border-0 bg-transparent;
-}
-
-.react-flags-select .flag-select__options {
-  @apply mt-1 border border-gray-100 shadow-lg rounded-md;
-}
-
-.react-flags-select .flag-select__option {
-  @apply hover:bg-gray-50;
-}
-
-.react-flags-select .flag-select__option--selected {
-  @apply bg-gray-50;
-}
-
+/* Swiper Styles */
 .project-swiper {
   width: 100%;
   height: 100%;
@@ -72,6 +43,7 @@ body {
   opacity: 1;
 }
 
+/* Modal Swiper Styles */
 .modal-swiper {
   width: 100%;
   height: 100%;
